cabal-version:       3.0

name:       Model-Checking-LTL-CTLS
synopsis:   Simple and Efficient On-the-Fly Model Checking for LTL, CTL and CTL★
version:    3.0.0
author:     Cenobio Moisés Vázquez Reyes
maintainer: spidermoy@ciencias.unam.mx


executable          model-check
  main-is:          Main.hs
  other-modules:    Core,
                    Examples,
                    Experiments,
                    ParserForms,
                    ParserNuXmv,
                    RandomForms,
                    RandomKS,
                    StateMonad
  ghc-options:      -Wall
                    -fno-warn-type-defaults
                    -threaded
                    -with-rtsopts=-N2
  build-depends:    base >= 4,
                    containers,
                    random,
                    time,
                    process
  default-language: Haskell2010
